<resources>
    <string name="app_name">My Shop Manager</string>
    <string name="add_item">this button use to add items</string>
    <string name="ava_item">Total Ava: %1$s</string>
    <string name="used_item">Total Use: %1$s</string>
    <string name="total_item">Total Item: %1$s</string>
    <string name="add_item_here">Add Item Here</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="enter_total_item">Enter Total item</string>
    <string name="add">add item</string>
    <string name="detail">Detail</string>
    <string name="x">X</string>
    <string name="history">History</string>
    <string name="update_use">update</string>
    <string name="close">use for close dialoge</string>
    <string name="update_dialog">Update Dialog</string>
    <string name="add_more_item">Add More Item</string>
    <string name="today_use_update">Today Use Update</string>
    <string name="enter_update_no">Enter Update No</string>
</resources>