<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCloseU">
        <LinearLayout
            android:id="@+id/layoutSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">
            <TextView
                android:id="@+id/selectUseUpdate"
                style="@style/textStyle16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:background="@drawable/unselect_item"
                android:text="@string/today_use_update" />

            <View
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/selectAddMore"
                style="@style/textStyle16"
                android:background="@drawable/unselect_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:text="@string/add_more_item" />


        </LinearLayout>

        <EditText
            android:id="@+id/eTxtNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="true"
            android:layout_below="@id/layoutSelect"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_update_no"
            android:inputType="numberSigned" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/eTxtNumber"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:text="@string/update_use" />


    </RelativeLayout>

    <ImageView
        android:id="@+id/btnCloseU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/close"
        android:padding="5dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/textStyle18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_dialog"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toStartOf="@+id/btnCloseU"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>