<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardElevation="@dimen/cardview_default_elevation"
    app:cardCornerRadius="@dimen/ten_dp_radius">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/txtTitle"
            style="@style/textStyle18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_item_here" />

        <EditText
            android:id="@+id/eTxtItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtTitle"
            android:layout_marginStart="@dimen/five_dp_m"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/five_dp_m"
            android:hint="@string/enter_item_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/eTxtTotalNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/eTxtItemName"
            android:layout_marginStart="@dimen/five_dp_m"
            android:layout_marginTop="@dimen/five_dp_m"
            android:layout_marginEnd="@dimen/five_dp_m"
            android:hint="@string/enter_total_item"
            android:inputType="number" />

        <Button
            android:id="@+id/btnAddItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/eTxtTotalNo"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:text="@string/add" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>