<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    app:cardCornerRadius="10dp"
    app:cardElevation="@dimen/ten_dp_radius"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp">
        <TextView
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x"
            android:textSize="34sp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:padding="10dp"/>
        <TextView
            android:id="@+id/txtDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:layout_centerHorizontal="true"
            style="@style/textStyle18"
            android:layout_marginBottom="10dp"
            android:textSize="22sp"/>
        <TextView
            android:id="@+id/txtItemNameD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:textAllCaps="true"
            style="@style/textStyle18"
            android:layout_below="@id/txtDetail"
            />
        <TextView
            android:id="@+id/txtTotalItemD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            style="@style/textStyle16"
           android:layout_below="@id/txtItemNameD" />
        <TextView
            android:id="@+id/txtItemUsedD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            style="@style/textStyle16"
            android:layout_below="@+id/txtTotalItemD"/>
        <TextView
            android:id="@+id/txtItemAva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            style="@style/textStyle16"
            android:layout_below="@id/txtItemUsedD"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
           android:gravity="center"
           android:layout_below="@id/txtItemAva"
           android:layout_centerHorizontal="true">
           <Button
               android:id="@+id/btnHistory"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:layout_marginStart="10dp"
               android:text="@string/history" />
           <View
               android:layout_width="1dp"
               android:layout_height="1dp"
               android:layout_weight="1"/>
           <Button
               android:id="@+id/btnAddUsed"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:layout_marginEnd="10dp"
               android:text="@string/update_use"
              />
       </LinearLayout>

    </RelativeLayout>


</androidx.cardview.widget.CardView>